# banxaas

./: .dockerignore  .env  .env example  .gitignore  Dockerfile  README.md  angular.json  docker-compose.yml  package-lock.json  package.json  requirements.txt  tailwind.config.js
backend/: .env  .env_example_backend  Dockerfile  log.txt  manage.py  requirements.txt
backend/api/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  viewsets.py
backend/api/externe/: OrangeSmsApiToken.py  OrangeSmsApiToken.txt
backend/api/migrations/: 0001_initial.py  0002_alter_ad_amountfixe_alter_ad_amountmax_and_more.py  0002_remove_user_creationdate.py  0002_rename_id_user_id.py  0002_rename_numero_paymentmethod_phone.py  0002_trade_tradehash_trade_walletadress_alter_trade_steps.py  0002_user_password.py  0003_alter_ad_amounttype_alter_ad_quantitytype.py  0003_rename_id_user_id.py  0003_rename_walletadress_trade_walletaddress.py  0003_user_isactive.py  (+28 more)
backend/backend/: asgi.py  settings.py  urls.py
bdk/: Cargo.toml  Dockerfile
bdk/command/: bdk_do_transaction  bdk_generate_address  bdk_get_balance
bdk/src/: main.rs
frontend/: Dockerfile  angular.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: index.html  proxy.config.json  styles.scss
gateway/: .env  Dockerfile  db.sqlite3  requirements.txt
gateway/gateway/: asgi.py  consumers.py  routing.py  settings.py  urls.py  views.py  wsgi.py
runtime/: Dockerfile
src/: index.html  styles.scss
src/app/: app-routing.module.ts  app.component.ts  app.module.ts
(+322 files in other folders)
