[package]
name = "bitcoin-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.22", default-features = false, features = ["all-keys", "key-value-db", "electrum"]}
dirs-next = "2.0"
base64 = "0.13.0"
bitcoin = "0.28.1"